# uv-workspaces-eggdishes

./: README.md  pyproject.toml
eggdishes-boiled/: pyproject.toml
eggdishes-boiled/src/eggdishes_boiled/: __init__.py  boiled_egg.py
eggdishes-core/: pyproject.toml
eggdishes-core/src/eggdishes_core/: __init__.py  fresh_egg.py  hookspecs.py  lib.py  plugins.py
eggdishes-main/: pyproject.toml
eggdishes-main/src/eggdishes_main/: cli.py  plugins.py
eggdishes-poached/: pyproject.toml
eggdishes-poached/src/eggdishes_poached/: __init__.py  poached_egg.py
eggdishes-scrambled/: pyproject.toml
eggdishes-scrambled/src/eggdishes_scrambled/: __init__.py  scrambled_egg.py
eggdishes-sunnysideup/: pyproject.toml
eggdishes-sunnysideup/src/eggdishes_sunnysideup/: __init__.py  sunnysideup_egg.py
