[project]
name = "eggdishes"
version = "0.4.0"
description = "Egg Recipe CLI"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "eggdishes-core",
    "eggdishes-main",
    "eggdishes-scrambled",
    "eggdishes-sunnysideup",
    "eggdishes-poached",
    "eggdishes-boiled",
]

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "ruff>=0.11.7",
]
