[project]
name = "eggdishes-boiled"
version = "0.4.0"
description = "boiled egg module for eggdishes"
dependencies = ["eggdishes-core"]

[tool.uv.sources]
eggdishes-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."eggdishes"]
"boiled" = "eggdishes_boiled.boiled_egg"