[project]
name = "eggdishes-main"
version = "0.1.0"
description = "application module for eggdishes"
readme = "README.md"
dependencies = ["click>=8.1.8", "eggdishes-core"]

[tool.uv.sources]
eggdishes-core = { workspace = true }

[project.scripts]
eggdishes = "eggdishes_main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
