[project]
name = "eggdishes-poached"
version = "0.3.0"
description = "poached egg module for eggdishes"
dependencies = ["eggdishes-core"]

[tool.uv.sources]
eggdishes-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."eggdishes"]
"poached" = "eggdishes_poached.poached_egg"