[project]
name = "eggdishes-scrambled"
version = "0.5.0"
description = "scrambled egg module for eggdishes"
dependencies = ["eggdishes-core"]

[tool.uv.sources]
eggdishes-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."eggdishes"]
"scrambled" = "eggdishes_scrambled.scrambled_egg"
