[project]
name = "eggdishes-sunnysideup"
version = "0.3.0"
description = "sunny-side-up egg module for eggdishes"
dependencies = ["eggdishes-core"]

[tool.uv.sources]
eggdishes-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points."eggdishes"]
"sunnysideup" = "eggdishes_sunnysideup.sunnysideup_egg"